--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@prisma/client": "^6.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.514.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
