--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1"
   },
