--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1"
   },
